# c-upup

./: .gitignore  CMakeLists.txt  Makefile  README.md  develop.c  docker command.txt  docker.txt  fortest.c  git-stash-demo.txt  gitignore-test.txt  length.c  ntci_c.cpp  start.sh  stringtest.c  struct.c  test.c  vcs.c
include/: test.h
source/: ssl.txt
src/: develop.c  file.c  fortest.c  intarrry.c  length.c  little2big32.c  snprintf_test.c  struct.c  test.c  vcs.c
src/5suo/: malloc.c  pointer.cpp  structmalloc.c
src/ExpressionEvaluation/: ExpressionEvaluation .c  ExpressionEvaluation2.c
src/average/: averageV2.0.c
src/paper/: hashvalue.c  test.c
src/study_upup/: free.c  git_study.c  int_arrry.c  length.c  max_int_value.c  sizeof.c  snprintf.c  string.c  struct.c
src/temp/: test.c
src/tests/: NullPointerExceptionTest.c  develop.c  sizeoftest.c  struct.c  test.c
src/tests1/: little2big32.c
src/utils/: big_little_endian.c  little2big32.c
tests/: free.c  start.sh
tests/free_function_test/: free.c
tests/pointarray_test/: pointarray_test.c
